--- a/NAMESPACE
+++ b/NAMESPACE
@@ -17,6 +17,7 @@ export(chmatch, "%chin%", chorder, chgroup)
 export(rbindlist)
 export(fread)
 export(fwrite)
+export(fwrite_libsvm)
 export(foverlaps)
 export(shift)
 export(transpose)
